--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
-    android:background="@color/colorPrimary"
+    android:background="#ffffff"
     android:fitsSystemWindows="true"
     tools:context="com.example.mathieu.meetus.LoginActivity">
 
@@ -62,8 +62,8 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dip"
-            android:background="@color/colorAccent"
-            android:text="@string/btn_reset_password"
+            android:background="@drawable/barreguess"
+            android:text ="@string/btn_reset_password"
             android:textColor="@android:color/black" />
 
         <Button
@@ -71,9 +71,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:background="@null"
+            android:background="@drawable/barreguess"
             android:text="@string/btn_back"
-            android:textColor="@color/colorAccent" />
+            android:textColor="@android:color/black" />
 
     </LinearLayout>
 
