--- a/app/src/main/res/layout/activity_create_profil.xml
+++ b/app/src/main/res/layout/activity_create_profil.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_create_profil"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="#ffffff"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:fillViewport="true"
+    android:scrollbars = "vertical"
+    android:scrollbarStyle="insideInset"
     tools:context="com.example.mathieu.meetus.CreateProfilActivity">
 
 
-
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
     <EditText
         android:layout_width="wrap_content"
@@ -22,10 +24,11 @@
         android:hint="Techno (Java, PHP, C/C++ ...)"
         android:ems="10"
         android:id="@+id/editTextTechno"
+        android:gravity="center_vertical|center"
         android:layout_below="@+id/editTextAge"
-        android:layout_alignLeft="@+id/editTextWild"
-        android:layout_alignStart="@+id/editTextWild"
-        android:gravity="center_vertical|center" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="36dp" />
 
 
     <EditText
@@ -38,8 +41,9 @@
         android:id="@+id/editTextAge"
         android:gravity="center_vertical|center"
         android:layout_below="@+id/editTextName"
-        android:layout_alignLeft="@+id/editTextTechno"
-        android:layout_alignStart="@+id/editTextTechno" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="48dp" />
 
     <ImageView
         android:layout_width="wrap_content"
@@ -59,8 +63,9 @@
         android:id="@+id/editTextVille"
         android:gravity="center_vertical|center"
         android:layout_below="@+id/editTextWild"
-        android:layout_alignLeft="@+id/editTextWild"
-        android:layout_alignStart="@+id/editTextWild" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="38dp" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -72,7 +77,9 @@
         android:id="@+id/editTextWild"
         android:gravity="center_vertical|center"
         android:layout_below="@+id/editTextTechno"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="33dp" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -81,12 +88,12 @@
         android:background="@drawable/text_d"
         android:hint="Name"
         android:ems="10"
-        android:layout_marginTop="17dp"
+        android:layout_marginTop="139dp"
         android:id="@+id/editTextName"
         android:gravity="center_vertical|center_horizontal"
         android:layout_below="@+id/PhotoProfil"
-        android:layout_alignLeft="@+id/editTextAge"
-        android:layout_alignStart="@+id/editTextAge" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <Button
         android:hint="Edit my profil"
@@ -94,6 +101,20 @@
         android:layout_height="wrap_content"
         android:background="@drawable/start"
         android:id="@+id/buttonProfil"
-        android:layout_alignParentBottom="true"
+        android:layout_marginTop="41dp"
+        android:layout_below="@+id/editTextVille"
         android:layout_centerHorizontal="true" />
-</RelativeLayout>
+
+        <Button
+            android:id="@+id/buttonAddYourPhoto"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/buttonguess"
+            android:backgroundTint="#E9B532"
+            android:layout_below="@+id/PhotoProfil"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="29dp"
+            android:text="@string/show_me_your_wild_face" />
+
+    </RelativeLayout>
+</ScrollView>
