--- a/app/src/main/res/layout/activity_screen_slide.xml
+++ b/app/src/main/res/layout/activity_screen_slide.xml
@@ -2,5 +2,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="fill_parent"
+    android:background="#ffffff"
     android:layout_height="fill_parent"
     tools:context="com.example.mathieu.meetus.ScreenSlideActivity" />
