--- a/app/src/main/res/layout/fragment_screen_slide_page.xml
+++ b/app/src/main/res/layout/fragment_screen_slide_page.xml
@@ -1,40 +1,40 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <RelativeLayout
+
+    <RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:background="#ffffff"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        xmlns:app="http://schemas.android.com/apk/res-auto">
+
 
 
         <EditText
             android:id="@+id/editTextTechno"
             android:layout_width="wrap_content"
             android:layout_height="70dp"
+            android:layout_above="@+id/editTextWild"
+            android:layout_alignLeft="@+id/editTextWild"
+            android:layout_alignStart="@+id/editTextWild"
             android:background="@drawable/text_d"
             android:ems="10"
             android:gravity="center_vertical|center"
             android:hint="Techno (Java, PHP, C/C++ ...)"
-            android:inputType="textPersonName"
-            android:layout_above="@+id/editTextWild"
-            android:layout_alignLeft="@+id/editTextWild"
-            android:layout_alignStart="@+id/editTextWild" />
+            android:inputType="textPersonName" />
 
 
         <EditText
             android:id="@+id/editTextAge"
             android:layout_width="wrap_content"
             android:layout_height="70dp"
+            android:layout_above="@+id/editTextTechno"
+            android:layout_alignLeft="@+id/editTextTechno"
+            android:layout_alignStart="@+id/editTextTechno"
             android:background="@drawable/text_d"
             android:ems="10"
             android:gravity="center_vertical|center"
             android:hint="Age"
-            android:inputType="textPersonName"
-            android:layout_above="@+id/editTextTechno"
-            android:layout_alignLeft="@+id/editTextTechno"
-            android:layout_alignStart="@+id/editTextTechno" />
+            android:inputType="textPersonName" />
 
         <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/PhotoProfil"
@@ -43,75 +43,75 @@
             android:src="@drawable/imgmarineprofil"
             app:civ_border_color="#FF000000"
             app:civ_border_width="2dp"
-            android:layout_above="@+id/editTextName"
-            android:layout_centerHorizontal="true" />
+            android:layout_below="@+id/polnaref"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="15dp" />
+
         <TextView
+            android:id="@+id/polnaref"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/polnaref"/>
+            android:layout_height="wrap_content" />
 
         <EditText
             android:id="@+id/editTextVille"
             android:layout_width="wrap_content"
             android:layout_height="70dp"
+            android:layout_above="@+id/buttonProfil"
+            android:layout_alignLeft="@+id/editTextWild"
+            android:layout_alignStart="@+id/editTextWild"
+            android:layout_marginBottom="15dp"
             android:background="@drawable/text_d"
             android:ems="10"
             android:gravity="center_vertical|center"
             android:hint="Ville"
-            android:inputType="textPersonName"
-            android:layout_above="@+id/buttonProfil"
-            android:layout_alignLeft="@+id/editTextWild"
-            android:layout_alignStart="@+id/editTextWild"
-            android:layout_marginBottom="15dp" />
+            android:inputType="textPersonName" />
 
         <EditText
             android:id="@+id/editTextWild"
             android:layout_width="wrap_content"
             android:layout_height="70dp"
+            android:layout_above="@+id/editTextVille"
+            android:layout_centerHorizontal="true"
             android:background="@drawable/text_d"
             android:ems="10"
             android:gravity="center_vertical|center"
             android:hint="Côté Wild"
-            android:inputType="textPersonName"
-            android:layout_above="@+id/editTextVille"
-            android:layout_centerHorizontal="true" />
+            android:inputType="textPersonName" />
 
         <EditText
             android:id="@+id/editTextName"
             android:layout_width="wrap_content"
             android:layout_height="70dp"
+            android:layout_above="@+id/editTextAge"
+            android:layout_alignLeft="@+id/editTextAge"
+            android:layout_alignStart="@+id/editTextAge"
             android:background="@drawable/text_d"
             android:ems="10"
             android:gravity="center_vertical|center_horizontal"
             android:hint="Name"
-            android:inputType="textPersonName"
-            android:layout_above="@+id/editTextAge"
-            android:layout_alignLeft="@+id/editTextAge"
-            android:layout_alignStart="@+id/editTextAge" />
+            android:inputType="textPersonName" />
 
         <Button
             android:id="@+id/buttonProfil"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/start"
-            android:hint="Edit my profil"
-            android:textColorHint="#FFFFFF"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="27dp" />
+            android:layout_marginBottom="27dp"
+            android:background="@drawable/start"
+            android:hint="Edit my profil"
+            android:textColorHint="#FFFFFF" />
 
-        <ImageButton
+
+        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/SignOutButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/logoutrounded"
-            android:layout_marginTop="30dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignLeft="@+id/editTextName"
-            android:layout_alignStart="@+id/editTextName"
-            android:layout_marginLeft="11dp"
-            android:layout_marginStart="11dp" />
+            android:layout_width="61dp"
+            android:layout_height="55dp"
+            android:src="@drawable/logoutrounded"
+            app:civ_border_color="#FF000000"
+            app:civ_border_width="1dp"
+            android:layout_below="@+id/polnaref"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
 
     </RelativeLayout>
-
-</FrameLayout>
