--- a/app/src/main/res/layout/fragment_tutoriel.xml
+++ b/app/src/main/res/layout/fragment_tutoriel.xml
@@ -2,17 +2,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#ffffff"
     tools:context="com.example.mathieu.meetus.TutorielFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:id="@+id/tvFragTuto"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:textSize="26dp"
-        android:text="TextView" />
 
     <ImageView
         android:layout_width="150dp"
