--- a/app/src/main/res/layout/layout_welcome.xml
+++ b/app/src/main/res/layout/layout_welcome.xml
@@ -5,6 +5,7 @@
     android:id="@+id/activity_profil_welcome"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#ffffff"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -34,9 +35,9 @@
         android:layout_height="75dp"
         app:srcCompat="@drawable/meetus"
         android:id="@+id/imageViewMeetus"
-        android:layout_below="@+id/UserName"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="37dp" />
+        android:layout_marginTop="7dp"
+        android:layout_below="@+id/ivPhotoProfil"
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:text="TextView"
@@ -44,17 +45,18 @@
         android:layout_height="wrap_content"
         android:textSize="25dp"
         android:id="@+id/UserName"
-        android:layout_marginTop="47dp"
-        android:layout_below="@+id/imageView4"
+        android:layout_marginTop="30dp"
+        android:layout_below="@+id/imageViewMeetus"
         android:layout_centerHorizontal="true" />
 
     <Button
-        android:text="Button"
+        android:text="@string/nxt_string_wlcome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="21dp"
-        android:id="@+id/button2"
+        android:id="@+id/buttonnext"
         android:background="@drawable/start"
-        android:layout_below="@+id/imageViewMeetus"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentBottom="true"
+        android:layout_alignRight="@+id/ivPhotoProfil"
+        android:layout_alignEnd="@+id/ivPhotoProfil"
+        android:layout_marginBottom="50dp" />
 </RelativeLayout>
