--- a/app/src/main/res/layout/score_activity.xml
+++ b/app/src/main/res/layout/score_activity.xml
@@ -4,6 +4,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
+    android:background="#ffffff"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.mathieu.meetus.ScoreResultsActivity"
     xmlns:android="http://schemas.android.com/apk/res/android"
