--- a/app/src/main/res/layout/fragment_screen_slide_page.xml
+++ b/app/src/main/res/layout/fragment_screen_slide_page.xml
@@ -92,7 +92,7 @@
             android:inputType="textPersonName" />
 
         <Button
-            android:id="@+id/buttonProfil"
+            android:id="@+id/buttonEditProfil"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
