--- a/app/src/main/res/layout/fragment_screen_slide_page.xml
+++ b/app/src/main/res/layout/fragment_screen_slide_page.xml
@@ -56,15 +56,14 @@
             android:id="@+id/editTextVille"
             android:layout_width="wrap_content"
             android:layout_height="70dp"
-            android:layout_above="@+id/buttonProfil"
-            android:layout_alignLeft="@+id/editTextWild"
-            android:layout_alignStart="@+id/editTextWild"
-            android:layout_marginBottom="15dp"
             android:background="@drawable/text_d"
             android:ems="10"
             android:gravity="center_vertical|center"
             android:hint="Ville"
-            android:inputType="textPersonName" />
+            android:inputType="textPersonName"
+            android:layout_above="@+id/buttonEditProfil"
+            android:layout_alignLeft="@+id/editTextTechno"
+            android:layout_alignStart="@+id/editTextTechno" />
 
         <TextView
             android:id="@+id/editTextWild"
