--- a/app/src/main/res/layout/fragment_tutoriel.xml
+++ b/app/src/main/res/layout/fragment_tutoriel.xml
@@ -1,4 +1,4 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,19 +11,21 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:src="@drawable/meetus"
-        android:layout_marginTop="50dp"
         android:layout_gravity="center_horizontal"
-        />
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/imageView" />
 
     <TextView
-        android:layout_width="match_parent"
+        android:id="@+id/textView"
+        android:layout_width="300dp"
         android:layout_height="match_parent"
         android:layout_gravity="center_horizontal"
+        android:layout_marginTop="20dp"
+        android:lineSpacingExtra="10dp"
+        android:lineSpacingMultiplier="1.2"
         android:text="@string/TutorialMeetUs"
-        android:lineSpacingExtra="2dp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
-        android:layout_marginTop="230dp"
-        />
+        android:layout_below="@+id/imageView"
+        android:layout_centerHorizontal="true" />
 
-</FrameLayout>
+</RelativeLayout>
