--- a/app/src/main/res/layout/activity_modify_profil_user.xml
+++ b/app/src/main/res/layout/activity_modify_profil_user.xml
@@ -50,6 +50,7 @@
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/photo"
             android:id="@+id/PhotoProfil"
+            android:layout_marginTop="144dp"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true" />
 
@@ -115,6 +116,15 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="29dp"
             android:text="@string/show_me_your_wild_face" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="27dp"
+            android:text="Ta face !" />
 
     </RelativeLayout>
 </ScrollView>
