--- a/app/src/main/res/layout/activity_modify_profil_user.xml
+++ b/app/src/main/res/layout/activity_modify_profil_user.xml
@@ -45,14 +45,19 @@
             android:layout_alignParentStart="true"
             android:layout_marginTop="48dp" />
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/photo"
+        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/PhotoProfil"
-            android:layout_marginTop="144dp"
-            android:layout_alignParentTop="true"
+            android:layout_width="61dp"
+            android:layout_height="55dp"
+            android:maxWidth="200dp"
+            android:maxHeight="200dp"
+            android:src="@drawable/photoflou"
+            app:civ_border_color="#FF000000"
+            app:civ_border_width="1dp"
+            android:layout_marginTop="57dp"
+            android:layout_below="@+id/textView2"
             android:layout_centerHorizontal="true" />
+
 
         <EditText
             android:layout_width="wrap_content"
