--- a/app/src/main/res/layout/score_activity.xml
+++ b/app/src/main/res/layout/score_activity.xml
@@ -11,64 +11,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ImageView
-        android:id="@+id/imageView7"
-        android:layout_alignBottom="@+id/imageView12"
-        android:layout_below="@+id/textView7"
-        android:layout_centerHorizontal="true"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="38dp"
-        android:layout_width="wrap_content"
-        app:srcCompat="@drawable/start" />
-
-    <ImageView
-        android:id="@+id/imageView5"
-        android:layout_alignTop="@+id/imageView3"
-        android:layout_centerHorizontal="true"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:layout_width="wrap_content"
-        app:srcCompat="@drawable/dix" />
-
-    <ImageView
-        android:id="@+id/imageView12"
-        android:layout_alignEnd="@+id/imageView7"
-        android:layout_alignParentBottom="true"
-        android:layout_alignRight="@+id/imageView7"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="14dp"
-        android:layout_marginRight="14dp"
-        android:layout_width="wrap_content"
-        app:srcCompat="@drawable/start" />
-
     <TextView
         android:id="@+id/textView7"
-        android:layout_above="@+id/imageView12"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="46dp"
         android:layout_width="wrap_content"
-        android:text="Tu as l impression de bien connaitre Marine mais essaie encore ça peut être mieux !" />
-
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_above="@+id/textView7"
-        android:layout_centerHorizontal="true"
-        android:layout_height="100dp"
-        android:layout_marginBottom="13dp"
-        android:layout_width="100dp"
-        app:srcCompat="@drawable/oval" />
+        android:text="kljezijrezjrejzirjirjiejriezjijreirjezlkrejzkrljelkrjklerklzjrkekzjkrkejrle"
+        android:gravity="center_horizontal"
+        android:layout_marginTop="72dp"
+        android:layout_below="@+id/textView5"
+        android:layout_centerHorizontal="true" />
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_above="@+id/imageView5"
-        android:layout_centerHorizontal="true"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="13dp"
-        android:layout_width="wrap_content"
-        app:srcCompat="@drawable/photoflou" />
+        android:layout_height="100dp"
+        android:layout_width="100dp"
+        android:maxHeight="80dp"
+        android:maxWidth="80dp"
+        android:layout_marginBottom="63dp"
+        android:layout_above="@+id/textView3"
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:id="@+id/textView5"
@@ -79,15 +40,6 @@
         android:textSize="20dp"
         android:textStyle="bold" />
 
-    <ImageView
-        android:id="@+id/imageView8"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        app:srcCompat="@drawable/quest"
-        android:layout_alignBottom="@+id/imageView3"
-        android:layout_alignRight="@+id/textView5"
-        android:layout_alignEnd="@+id/textView5" />
-
     <Button
         android:background="@drawable/start"
         android:id="@+id/button2"
@@ -96,8 +48,18 @@
         android:text="TRY AGAIN"
         android:textColor="#FEFEFE"
         android:textSize="18dp"
-        android:layout_below="@+id/textView7"
-        android:layout_alignLeft="@+id/imageView12"
-        android:layout_alignStart="@+id/imageView12" />
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="28dp" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="120dp"
+        android:textSize="45dp"
+        android:text="TextView"
+        android:layout_above="@+id/button2"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="32dp" />
 
 </RelativeLayout>
